--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ decorator==5.1.1
 Flask==3.1.0
 Flask-Cors==5.0.0
 flatbuffers==25.1.24
+pip==25.0
 gast==0.4.0
 google-pasta==0.2.0
 grpcio==1.70.0
